[project]
name = "01-validated-basic-agent"
version = "0.1.0"
description = "Illustration of a validated AI Agent interaction with a third party API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "instructor>=1.6.3",
    "litellm>=1.52.3",
    "openai>=1.51.2",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
